fix: correções para que o projeto seja funcional e utilizável